Integration tests for distribution